@@ -77,6 +77,26 @@ const char* LANGUAGE_C = "C";
 const char* LANGUAGE_CXX = "C++";
 const char* LANGUAGE_JAVA = "Java";
 
+
+/* Return Status */
+
+enum {
+  STATUS_SUCCESS = 0,
+  STATUS_ERROR = 1,
+  STATUS_INPUTFILE_PROBLEM = 2,
+  STATUS_UNKNOWN_OPTION = 3,
+  STATUS_UNKNOWN_ENCODING = 4,
+  STATUS_LIBXML2_FEATURE = 5,
+  STATUS_INVALID_LANGUAGE = 6,
+  STATUS_LANGUAGE_MISSING = 7,
+  STATUS_FILENAME_MISSING = 8,
+  STATUS_DIRECTORY_MISSING = 9,
+  STATUS_VERSION_MISSING = 10,
+  STATUS_SRCENCODING_MISSING = 11,
+  STATUS_XMLENCODING_MISSING = 12,
+};
+
+
 // width of long form of flag
 const int COL = 20;
 
